samples/_failures_safe/1761326935_ba3be4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab715080.c: In function ‘main’:
./samples/SAFE/__tmp_ab715080.c:135:5: error: expected expression at end of input
  135 |     print_buffer(&
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ab715080.c:135:5: error: expected declaration or statement at end of input
